# frame-aligner

./: .gitignore  CMakeLists.txt  FrameAlignerTest.m  build.bat  build.sh
FrameAligner/: AbstractFrameAligner.cpp  AbstractFrameAligner.h  CMakeLists.txt  Cache.h  Cache_impl.h  Cv3dUtils.cpp  Cv3dUtils.h  CvCache.cpp  CvCache.h  FrameWarpAligner.cpp  FrameWarpAligner.h  FrameWarper.cpp  FrameWarper.h  GpuFrameWarper.cpp  GpuFrameWarper.h  GpuFrameWarperKernels.cu  GpuFrameWarperKernels.h  GpuTextureManager.h  ImageScanParameters.h  OptimisationModel.cpp  OptimisationModel.h  Pool.h  ProducerConsumer.h  RigidFrameAligner.cpp  RigidFrameAligner.h  Sobel3d.cpp  Sobel3d.h  SystemMemory.cpp  VolumePhaseCorrelator.cpp  VolumePhaseCorrelator.h  helper_cuda.h
FrameAligner/cmake/: FindFFTW.cmake  FindFFTW3.cmake  Finddlib.cmake  LibFindMacros.cmake
FrameAligner/cmake/Modules/: FindFFTW.cmake
FrameAlignerMex/: CMakeLists.txt  FrameAlignerMex.cpp  MexUtils.h  cxxpool.h
